<resources>
    <string name="app_name" translatable="false">TastyCount</string>
    <string name="main_input_phone_search_bar">Введите последние цифры номера телефона</string>
    <string name="main_button_search">Найти</string>
    <string name="main_title">Найти клиента</string>
    <string name="main_button_add_customer">Новый клиент</string>
    <string name="main_button_settings">Настройки</string>
    <string name="main_no_result">Ничего не найдено</string>

    <string name="toolbar_dialog_title">Введите пароль администратора</string>
    <string name="toolbar_dialog_ok">Войти</string>
    <string name="toolbar_toast_wrong_pw">Неверный пароль</string>

    <string name="new_input_phone">Номер телефона</string>
    <string name="new_input_name">Имя</string>
    <string name="new_button_add">Добавить запись</string>
    <string name="new_toast_name_error">Допускаются только символы русского или английского алфавита</string>
    <string name="new_hint_add_cup">Добавить один напиток автоматически</string>
    <string name="new_toast_phone_error">Допускаются только цифры</string>
    <string name="new_toast_empty_field">Обязательное поле</string>
    <string name="new_toast_added">Клиент добавлен</string>

    <string name="info_title">Карточка клиента</string>
    <string name="info_button_update">Сохранить</string>
    <string name="info_button_add_coffee" translatable="false">+</string>
    <string name="info_button_claim">Cписать</string>
    <string name="info_button_delete_customer">Удалить клиента</string>
    <string name="info_button_revert_cups">Сбросить изменения</string>
    <string name="info_button_edit_phone">Изменить телефон</string>
    <string name="info_alert_lost">Потеряшка!</string>
    <string name="info_alert_free_cups">Доступно бесплатных напитков: %1$d</string>
    <string name="info_toast_phone_updated">Номер телефона обновлён</string>
    <string name="info_toast_cups_updated">Данные о напитках обновлены</string>
    <string name="info_toast_customer_deleted">Клиент удалён</string>
    <string name="info_hint_update_phone">Введите новый номер телефона</string>
    <string name="info_hint_last_visit_date">Последнее посещение</string>
    <string name="info_hint_registration_date">Дата регистрации</string>
    <string name="info_hint_name">Имя</string>
    <string name="info_hint_phone">Телефон</string>
    <string name="info_hint_show_dates_on_customer_screen">Показать даты регистрации и последнего визита</string>
    <string name="info_hint_hide_dates_on_customer_screen">Скрыть даты регистрации и последнего визита</string>
    <string name="info_dialog_phone_title">Обновить номер телефона</string>
    <string name="info_dialog_delete_main">Вы уверены, что хотите удалить клиента? Это действие нельзя отменить.</string>
    <string name="info_dialog_button_delete">Удалить</string>
    <string name="info_dialog_button_save">Сохранить</string>
    <string name="info_dialog_button_cancel">Отменить</string>

    <string name="settings_line_free_cups">Сколько напитков нужно купить клиенту, чтобы получить бесплатный</string>
    <string name="setting_line_returning_customer">Через сколько дней после последнего визита клиент считается потеряшкой</string>
    <string name="settings_line_delete_customer">Удалить клиента</string>
    <string name="settings_category_admin">Администраторские действия</string>
    <string name="settings_line_ask_admin_password">Запрашивать пароль администратора при входе в настройки приложения</string>
    <string name="settings_line_change_admin_password">Изменить пароль администратора</string>
    <string name="settings_dialog_title_update_password">Изменить пароль</string>
    <string name="settings_dialog_error_wrong_current_password">Неверный текущий пароль</string>
    <string name="settings_dialog_error_mismatch">Новый пароль и подтверждение не совпадают</string>
    <string name="settings_toast_password_saved">Пароль обновлен</string>
    <string name="settings_toast_password_not_saved">Пароль не был обновлен</string>

    <string name="settings_title_behavior">Поведение приложения</string>
    <string name="settings_hint_current_password">Текущий пароль</string>
    <string name="settings_hint_new_password">Новый пароль</string>
    <string name="settings_hint_confirmation">Подтверждение пароля</string>

    <string name="settings_category_export">База данных</string>
    <string name="setting_line_backup">Резервное копирование</string>
    <string name="setting_line_import">Импортировать базу данных из .csv</string>
    <string name="setting_line_export">Экспортировать базу данных в .csv</string>
    <string name="settings_button_apply_changes">Сохранить</string>
    <string name="settings_toast_invalid_number">Введите целое число больше нуля</string>
    <string name="settings_toast_empty_password">Пароль не может быть пустым</string>
    <string name="settings_toast_short_password">Введите пароль не менее трёх символов</string>

    <string name="placeholder_constant_free_cup" translatable="false">FREE_CUP</string>
    <string name="placeholder_constant_returning_customer" translatable="false">RETURNING_CUSTOMER</string>
    <string name="placeholder_extra_customer_id" translatable="false">CUSTOMER_ID</string>
    <string name="placeholder_extra_delete_customer" translatable="false">DELETE_CUSTOMER</string>
    <string name="placeholder_locale">ru</string>
    <string name="placeholder_setting_admin_password" translatable="false">setting_admin_password</string>
    <string name="placeholder_setting_ask_password" translatable="false">setting_ask_password</string>
    <string name="placeholder_setting_admin_actions" translatable="false">settings_category_admin</string>
    <string name="placeholder_setting_dates" translatable="false">settings_show_dates_on_customer_screen</string>
    <string name="placeholder_setting_add_cup" translatable="false">settings_add_cup_to_new_customer</string>
    <string name="placeholder_setting_free_cup" translatable="false">setting_free_cups</string>
    <string name="placeholder_setting_returning_customer" translatable="false">setting_returning_customer</string>
    <string name="placeholder_setting_delete" translatable="false">settings_delete_customer</string>
    <string name="placeholder_pattern_ru" translatable="false">[а-яА-Я]+</string>
    <string name="placeholder_pattern_en" translatable="false">[a-zA-Z]+</string>
    <string name="placeholder_pattern_digits" translatable="false">[0-9]+</string>
    <string name="placeholder_pattern_spaces" translatable="false">[ ]+</string>
    <string name="placeholder_phone_fragment_tag" translatable="false">edit_phone_fragment</string>
    <string name="placeholder_password_fragment_tag" translatable="false">password_prompt_fragment</string>
    <string name="placeholder_update_password_fragment_tag" translatable="false">new_password_fragment</string>
    <string name="placeholder_new_password_bundle" translatable="false">newPassword</string>
</resources>