<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        app:key="settings_category_behavior"
        app:title="@string/settings_title_behavior">
        <EditTextPreference
            app:key="@string/placeholder_setting_free_cup"
            app:title="@string/settings_line_free_cups"
            app:defaultValue="5"/>

        <EditTextPreference
            app:key="@string/placeholder_setting_returning_customer"
            app:title="@string/setting_line_returning_customer"
            app:defaultValue="30"/>

    </PreferenceCategory>
    <PreferenceCategory>
        <Preference
            app:key="@string/placeholder_setting_delete"
            app:title="@string/settings_line_delete_customer"/>
    </PreferenceCategory>

</PreferenceScreen>
