<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/settings_password_current"
        android:layout_width="0dp"
        android:layout_marginTop="5dp"
        app:errorEnabled="true"
        android:layout_height="wrap_content"
        android:hint="@string/settings_hint_current_password"
        app:layout_constraintTop_toTopOf="parent"
        app:endIconMode="password_toggle"
        app:layout_constraintStart_toStartOf="@+id/guideline_v_5"
        app:layout_constraintEnd_toEndOf="@+id/guideline_v_95">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:singleLine="true"
            android:inputType="textPassword"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/settings_password_new"
        android:layout_width="0dp"
        android:layout_marginTop="5dp"
        app:errorEnabled="true"
        android:layout_height="wrap_content"
        android:hint="@string/settings_hint_new_password"
        app:layout_constraintTop_toBottomOf="@+id/settings_password_current"
        app:endIconMode="password_toggle"
        app:layout_constraintStart_toStartOf="@+id/guideline_v_5"
        app:layout_constraintEnd_toEndOf="@+id/guideline_v_95">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:singleLine="true"
            android:inputType="textPassword"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/settings_password_confirm"
        android:layout_width="0dp"
        android:layout_marginTop="5dp"
        app:errorEnabled="true"
        android:layout_height="wrap_content"
        android:hint="@string/settings_hint_confirmation"
        app:layout_constraintTop_toBottomOf="@+id/settings_password_new"
        app:endIconMode="password_toggle"
        app:layout_constraintStart_toStartOf="@+id/guideline_v_5"
        app:layout_constraintEnd_toEndOf="@+id/guideline_v_95">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:singleLine="true"
            android:inputType="textPassword"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v_95"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />
</androidx.constraintlayout.widget.ConstraintLayout>